syntax = "proto3";

import "pkg/types/error/error.proto";
import "pkg/types/ethereum/receipt.proto";
import "pkg/types/ethereum/transaction.proto";

option go_package = "github.com/consensys/orchestrate/src/infra/kafka/proto";

message TxResponse {

    // ID of the Response in UUID RFC 4122, ISO/IEC 9834-8:2005 format
    // e.g a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11
    string id = 1;

    // Name of the Chain as registered on the chain registry
    // e.g. 1 for mainnet, 3 for Ropsten
    string chain = 2;

    // ID of the Job created as part of transaction request
    // e.g 15276759-bbc6-4ead-ad51-ddfecf79cf09
    string jobUUID = 3;

    // Extra information (optional)
    map<string, string> headers = 4;

    // [option]
    map<string, string> context_labels = 5;

    ethereum.Transaction transaction = 6;
    ethereum.Receipt receipt = 7;

    repeated error.Error errors = 8;
}
